// Only for testing of svcMock
syntax = "proto3";

package foo;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service TestSvc {
  rpc Foo(FooRequest) returns (BarResponse) {}
  rpc FooServerStream (FooRequest) returns (stream StreamBarResponse) {}
  rpc FooClientStream (stream FooRequest) returns (BarResponse) {}
  rpc FooBieStream (stream FooRequest) returns (stream StreamBarResponse) {}
}

message FieldError {
  string field = 1;
  string message = 2;
  string code = 3;
}

message Error {
  int32 code = 1;
  string message = 2;
  repeated FieldError field_errors = 3;
}

message FooRequest {
  int32 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue password = 3;
  google.protobuf.StringValue token = 4;
}

message StreamBarResponse {
  string result = 1;
}

message BarResponse {
  Error error = 1;
  string result = 2;
}
